# workflow-stdm-05

./: .gitignore  GETTING_STARTED.md  INSTALL.md  LICENSE  NEW_FEATURES.md  PACKAGE_SUMMARY.md  PROJECT_COMPLETION.md  README.md  pyproject.toml  setup.sh
examples/: compare_models.py  custom_data_analysis.py  fit_merged_data.py  fit_separate_data.py  quickstart.py  quickstart_notebook.ipynb
src/stdm/: __init__.py  auto_report.py  cli.py  data_loader.py  data_validator.py  decomposition.py  tensor_builder.py  utils.py  visualization.py
tests/: test_basic.py
